--- a/leapsite/src/App.css
+++ b/leapsite/src/App.css
@@ -17,11 +17,14 @@
   size: 2;
 }
 .button{
-  padding:2rem;
-  font-size: 20px;
-  width: 5rem;
-  height: 2.5rem;
+  margin-top: 1rem;
+  padding:.9rem;
+  border-radius: 3rem;
+  font-size: 19px;
+  background-color: transparent;
+  color: white;
   accent-color:'green';
+  outline: #A0D995;
 }
 .form{
   padding-top: 1rem;
